fix(checkbox): support high contrast in FF.

--- a/packages/mdc-checkbox/_mixins.scss
+++ b/packages/mdc-checkbox/_mixins.scss
@@ -350,6 +350,7 @@
       0ms,
       $mdc-checkbox-transition-duration * 2
     );
+  stroke: currentColor;
   stroke-width: $mdc-checkbox-mark-stroke-size * 1.3;
   stroke-dashoffset: $mdc-checkbox-mark-path-length_;
   stroke-dasharray: $mdc-checkbox-mark-path-length_;
